# sidequest-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SOUL.md  pyproject.toml
docs/port-notes/: game-phase1-slice.md
scripts/: ab_eval_harness_cli.py  audit_content_drift.py  audit_namegen_corpora.py  ollama_latency_check.py
sidequest/: __init__.py
sidequest/agents/: __init__.py  ab_eval_harness.py  agent.py  anthropic_cost.py  anthropic_sdk_client.py  aside_resolver.py  claude_client.py  claude_stream_parser.py  encounter_render.py  lethality_arbiter.py  llm_factory.py  local_dm.py  model_routing.py  narrator.py  narrator_perception_filter.py  ollama_client.py  orchestrator.py  perception_filter.py  perception_rewriter.py  pov_swap.py  preprocessor.py  prompt_redaction.py  stream_fence.py  tool_registry.py  tooling_protocol.py
sidequest/audio/: __init__.py  interpreter.py  library_backend.py  models.py  protocol.py  rotator.py
sidequest/corpus/: __init__.py  diff.py  going_forward.py  miner.py  negatives.py  save_reader.py  schema.py  writer.py
sidequest/daemon_client/: __init__.py  client.py  state_mirror.py
sidequest/dungeon/: __init__.py  frontier_hook.py  lookahead_worker.py  materializer.py  persistence.py  region_projection.py  room_yaml_emit.py  seed_bootstrap.py  session_integration.py  setpiece_attach.py  setpieces.py  themes.py
sidequest/game/: __init__.py  ability.py  accusation.py  archetype_apply.py  beat_filter.py  beat_kinds.py  belief_state.py  builder.py  character.py  chassis.py  combatant.py  commands.py  creature_core.py  delta.py  delve_lifecycle.py  dice.py  disposition.py  encounter.py  encounter_tag.py  enemy_targeting.py  event_log.py  forensic_fold.py  forensic_query.py  game_slug.py  gossip_engine.py  history_chapter.py  location_resolver.py  lore_embedding.py  lore_seeding.py  lore_store.py  mechanical_census.py  migrations.py  monster_manual.py  morale.py  npc_pool.py  opposed_check.py  persistence.py  projection_filter.py  region_init.py  region_validation.py  (+25 more)
sidequest/genre/: __init__.py  cache.py  error.py  genre_code.py  lethality_policy_loader.py  loader.py  magic_loader.py  resolve.py  resolver.py
sidequest/handlers/: __init__.py  action_reveal.py  base.py  character_creation.py  connect.py  course_intent.py  dice_throw.py  dungeon_select.py  journal_request.py  orbital_intent.py  player_action.py  player_seat.py  retreat_to_hamlet.py  session_event.py  yield_action.py
sidequest/interior/: dispatch.py  loader.py  render.py
sidequest/magic/: __init__.py  confrontations.py  context_builder.py  innate_v1_cast.py  learned_ops.py  models.py  outputs.py  plugin.py  reliquary_ops.py  spell_catalog.py  state.py  validator.py
sidequest/media/: cache.py  prompt_composer.py  subject_extractor.py
sidequest/orbital/: beats.py  clock.py  conjunction.py  course.py  course_geometry.py  course_render.py  display.py  intent.py  label_strategy.py  loader.py  models.py  palette.py  position.py  render.py
sidequest/protocol/: __init__.py  base.py  course_intent.py  dice.py  dispatch.py  enums.py  messages.py  models.py  orbital_intent.py  provenance.py  sanitize.py  (+1 more)
tests/: conftest.py
(+1154 files in other folders)
