[project]
name = "sidequest-server"
version = "1.1.0"
description = "SideQuest Python API server — port target of sidequest-api (Rust). See ADR-082."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "websockets>=12.0",
    "anthropic>=0.40",
    "svgwrite>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.3",
    "ruff>=0.3",
    "pyright>=1.1.358",
    "httpx>=0.27",
]

[project.scripts]
sidequest-server = "sidequest.server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sidequest"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
# tests/e2e/ holds TestClient/websocket-driven integration tests that spin
# real FastAPI/ASGI wiring and violate the 30 s unit-suite budget. Run
# explicitly with `pytest tests/e2e/` when needed.
#
# --timeout=30 enforces that budget instead of merely documenting it: any
# unit test exceeding 30 s (e.g. a real `claude` subprocess leaking through
# a mock-guard gap) fails loud with a stack trace at the offending call
# rather than silently riding the 120 s ClaudeClient timeout. thread method
# is asyncio-safe (no SIGALRM dependency).
addopts = "--ignore=tests/e2e --timeout=30 --timeout-method=thread"
markers = [
    "e2e: integration test that spins a real ASGI app / websocket / services",
    "integration: end-to-end wiring test spanning multiple subsystems without a live server",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pyright]
venvPath = "."
venv = ".venv"
include = ["sidequest", "tests"]
pythonVersion = "3.12"
